--- a/HeyGoHome/HeyGoHome.csproj
+++ b/HeyGoHome/HeyGoHome.csproj
@@ -125,7 +125,7 @@
   <ItemGroup>
     <Content Include="run.ico" />
     <Content Include="soon.ico" />
-    <Content Include="logo.ico" />
+    <Resource Include="logo.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
